<resources>
    <string name="app_name">TooDoo</string>
    <string name="action_add_note">Add note</string>
    <string name="action_notes">Notes</string>

    <!-- TODO: Add activity -->
    <string name="add_fragment_tag">AddFragment</string>
    <string name="add_fragment">Add activity to do</string>
    <string name="title_label">Title</string>
    <string name="title_hint">Note title</string>

    <string name="status_label">Status</string>
    <string name="priority_label">Priority</string>
    <string name="description_label">Description</string>
    <string name="description_hint">Add some description</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string-array name="priority_spinner">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="status_spinner">
        <item>UNFINISHED</item>
        <item>FINISHED</item>
    </string-array>

    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>

    <string name="notes_fragment_tag">NotesFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit">EditActivity</string>

</resources>
