<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:tag="@string/add_fragment_tag"
    android:padding="22dp"
    tools:context=".views.AddFragment"
    android:clickable="true">

    <EditText
        android:id="@+id/editText_TodoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:inputType="textCapSentences"
        android:enabled="true"
        android:scrollbars="vertical"
        android:maxLines="2"
        android:textSize="22sp"
        android:hint="@string/title_hint" />

    <TextView
        android:id="@+id/textView_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_TodoTitle"
        android:layout_marginBottom="8dp"
        android:text="@string/priority_label"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_priority"
        android:layout_marginBottom="8dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/priority_spinner"
        />


    <TextView
        android:id="@+id/textView_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_priority"
        android:layout_marginBottom="8dp"
        android:text="@string/description_label"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_comment"
        android:layout_marginBottom="8dp"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:minLines="4"
        android:textSize="20sp"
        android:hint="@string/description_hint" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_comment"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button" />
    </LinearLayout>

</RelativeLayout>

