<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EditActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText_EditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:inputType="textCapSentences"
        android:enabled="true"
        android:scrollbars="vertical"
        android:maxLines="2"
        android:textSize="22sp"
        android:hint="@string/title_hint" />

    <TextView
        android:id="@+id/textView_edit_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_EditTitle"
        android:layout_marginBottom="8dp"
        android:text="@string/priority_label"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_edit_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_edit_priority"
        android:layout_marginBottom="8dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/priority_spinner"
        />


    <TextView
        android:id="@+id/textView_edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_edit_priority"
        android:layout_marginBottom="8dp"
        android:text="@string/description_label"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_edit_comment"
        android:layout_marginBottom="8dp"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:minLines="4"
        android:textSize="20sp"
        android:hint="@string/description_hint" />

    <TextView
        android:id="@+id/textView_edit_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_edit_comment"
        android:layout_marginBottom="8dp"
        android:text="@string/status_label"
        android:textSize="16sp" />


    <Spinner
        android:id="@+id/spinner_edit_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_edit_status"
        android:layout_marginBottom="16dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/status_spinner"
        />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_edit_status"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_button" />

        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button" />
    </LinearLayout>

</RelativeLayout>